# SecureML

./: .gitignore  README.md  index.md  info.md  leaders.md
.github/workflows/: publish-pypi.yml  publish-testpypi.yml  test.yml
secureml/: CHANGELOG.md  LICENSE  QUICK_START.md  README.md  RUN_INTERACTIVE_DEMO.sh  RUN_SECURITY_DEMO.sh  coverage.xml  pyproject.toml
secureml/docs/: COMPLETE_DEMO_GUIDE.md  HOW_TO_RUN_DEMO.md  INTERACTIVE_DEMO_README.md  QUICKSTART.md  README_DEMOS.md  SECURITY_DEMO_README.md  SECURITY_DEMO_SUMMARY.md  USAGE_GUIDE.md  WATERMARKING_FEATURES.md  installation.md  openssf_integration.md  quickstart.md  threat_model.md
secureml/examples/: interactive_watermarking_demo.py  prove_security.py  prove_security_huggingface.py  run_demo.sh  security_attack_demo.py  test_interactive_demo.sh  try_basic_usage.py  try_compliance.py  try_fingerprinting.py  watermarking_example.py
secureml/examples/basic_usage/: huggingface_example.py  pytorch_example.py  xgboost_example.py
secureml/requirements/: base.txt  dev.txt  openssf.txt
secureml/requirements/optional/: ml-frameworks.txt
secureml/src/secureml/: __init__.py
secureml/src/secureml/api/: __init__.py  advanced.py  simple.py
secureml/src/secureml/cli/: __init__.py  main.py
secureml/src/secureml/core/: __init__.py  compliance.py  enterprise.py  fingerprint.py  model_detector.py  openssf_wrapper.py  watermark.py
secureml/src/secureml/handlers/: __init__.py  base_handler.py
secureml/src/secureml/integrations/: __init__.py
secureml/src/secureml/security/: __init__.py
secureml/src/secureml/utils/: __init__.py  config.py  exceptions.py  logging.py
secureml/tests/: conftest.py
secureml/tests/unit/: test_model_detector.py  test_simple_api.py  test_watermark.py
