[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secureaiml"
version = "0.1.3"
description = "Enterprise-Ready AI Model Security built on OpenSSF Model Signing"
authors = [
    {name = "Krish", email = "krish.dhar@owasp.org"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "machine-learning",
    "security",
    "ai",
    "model-signing",
    "mlops",
    "openssf",
    "sigstore",
    "ml-security",
    "model-security"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # "model-signing>=0.1.0",  # Not yet on PyPI - see openssf optional dependency
    "cryptography>=41.0.0",
    "joblib>=1.3.0",
    "numpy>=1.20.0",
    "pyyaml>=6.0",
    "typing-extensions>=4.7.0",
]

[project.optional-dependencies]
# ML Framework Support
xgboost = ["xgboost>=2.0.0"]
pytorch = ["torch>=2.0.0"]
tensorflow = ["tensorflow>=2.13.0"]
sklearn = ["scikit-learn>=1.3.0"]
lightgbm = ["lightgbm>=4.0.0"]
catboost = ["catboost>=1.2.0"]
huggingface = ["transformers>=4.30.0", "safetensors>=0.3.0"]
onnx = ["onnx>=1.14.0", "onnxruntime>=1.15.0"]

# All ML frameworks
ml-all = [
    "xgboost>=2.0.0",
    "torch>=2.0.0",
    "scikit-learn>=1.3.0",
    "lightgbm>=4.0.0",
    "transformers>=4.30.0",
]

# CLI with rich formatting
cli = [
    "click>=8.1.0",
    "rich>=13.0.0",
]

# Enterprise features
enterprise = [
    "boto3>=1.28.0",  # AWS KMS
    "azure-keyvault>=4.2.0",  # Azure Key Vault
    "google-cloud-kms>=2.19.0",  # GCP KMS
]

# Integrations
integrations = [
    "mlflow>=2.5.0",
    "wandb>=0.15.0",
]

# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
    "ipython>=8.12.0",
    "build>=0.10.0",
    "scikit-learn>=1.3.0",  # Required for tests
]

# Documentation
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.23.0",
]

# Complete install with everything
all = [
    "secureml[ml-all,cli,enterprise,integrations,dev,docs]",
]

[project.urls]
Homepage = "https://github.com/OWASP/SecureML"
Documentation = "https://github.com/OWASP/SecureML/blob/master/secureml/docs/"
Repository = "https://github.com/OWASP/SecureML"
Issues = "https://github.com/OWASP/SecureML/issues"
Changelog = "https://github.com/OWASP/SecureML/blob/master/secureml/CHANGELOG.md"

[project.scripts]
secureml = "secureml.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
secureml = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"test_*.py" = ["S101"]  # Allow asserts in tests

[tool.ruff.isort]
known-first-party = ["secureml"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradual typing
ignore_missing_imports = true
files = ["src/secureml"]

[[tool.mypy.overrides]]
module = "secureml.core.*"
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--cov=secureml",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "-v",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
precision = 2
